extends Panel

## /** íŠœí† ë¦¬ì–¼ íŒì—… UI
##  * ì˜ˆ/ì•„ë‹ˆì˜¤ ë²„íŠ¼ ì²˜ë¦¬
##  */

@onready var yes_button: Button = $VBoxContainer/ButtonContainer/YesButton
@onready var no_button: Button = $VBoxContainer/ButtonContainer/NoButton

# ì‹œê·¸ë„ ì •ì˜ (TutorialManagerê°€ êµ¬ë…)
signal tutorial_accepted()
signal tutorial_declined()

func _ready():
	print("ğŸ¯ [TutorialPopup] _ready í˜¸ì¶œë¨")
	yes_button.pressed.connect(_on_yes_pressed)
	no_button.pressed.connect(_on_no_pressed)
	print("ğŸ¯ [TutorialPopup] ë²„íŠ¼ ì‹œê·¸ë„ ì—°ê²° ì™„ë£Œ")

func _on_yes_pressed():
	print("âœ… [TutorialPopup] ì˜ˆ ë²„íŠ¼ í´ë¦­ë¨!")
	visible = false
	tutorial_accepted.emit()

func _on_no_pressed():
	print("âŒ [TutorialPopup] ì•„ë‹ˆì˜¤ ë²„íŠ¼ í´ë¦­ë¨!")
	visible = false
	tutorial_declined.emit()
